background of menus added to a new project.

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,8 @@ gen### Java template
 *.rar
 
 # Images
-*.png
-*.jpg
+#*.png
+#*.jpg
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -55,8 +55,6 @@ hs_err_pid*
 
 # Gradle
 .idea/**/gradle.xml
-.idea/**/libraries
-
 # CMake
 cmake-build-debug/
 cmake-build-release/
@@ -66,9 +64,6 @@ cmake-build-release/
 
 # File-based project format
 *.iws
-
-# IntelliJ
-out/
 
 # mpeltonen/sbt-idea plugin
 .idea_modules/
